// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render correctly with collapsed sidebar 1`] = `
<header
  className="sc-hKMtZM hjNxSb"
>
  <button
    id="sidebarToggler"
    onClick={[Function]}
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 512 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M32 96v64h448V96H32zm0 128v64h448v-64H32zm0 128v64h448v-64H32z"
        key="0"
      />
    </svg>
  </button>
  <a
    className="app-link"
    href="/"
    onClick={[Function]}
  >
    <div
      className="app-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M508.64 148.79c0-45-33.1-81.2-74-81.2C379.24 65 322.74 64 265 64h-18c-57.6 0-114.2 1-169.6 3.6C36.6 67.6 3.5 104 3.5 149 1 184.59-.06 220.19 0 255.79q-.15 53.4 3.4 106.9c0 45 33.1 81.5 73.9 81.5 58.2 2.7 117.9 3.9 178.6 3.8q91.2.3 178.6-3.8c40.9 0 74-36.5 74-81.5 2.4-35.7 3.5-71.3 3.4-107q.34-53.4-3.26-106.9zM207 353.89v-196.5l145 98.2z"
          key="0"
        />
      </svg>
    </div>
    <h1>
      Llutuve
    </h1>
  </a>
  <form
    className="sc-bczRLJ byqFuz"
  >
    <input
      autoComplete="off"
      name="q"
      onChange={[Function]}
      placeholder="Search"
      theme={
        Object {
          "appIcon": "#ff0200",
          "background": "#F9F9F9",
          "barBackground": "#ffffff",
          "inputBackground": "#ffffff",
          "inputBorder": "#cccccc",
          "linkActive": "#ff0200",
          "linkHoverBackground": "#ececec",
          "primary": "#030303",
          "searchButtonBackground": "#f8f8f8",
          "secondary": "#606060",
        }
      }
      type="text"
      value=""
    />
    <button
      className="clear-button"
      onClick={[Function]}
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
          key="0"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          key="1"
        />
      </svg>
    </button>
    <button
      className="search-button"
      onClick={[Function]}
      type="submit"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
          key="0"
        />
      </svg>
    </button>
  </form>
  <div
    className="sc-dkzDqf cbTxFK"
  >
    <button
      checked={false}
      className="sc-gsnTZi iizJZa"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="slider-background"
      >
        <div
          className="slider"
        />
      </div>
      <div
        className="slider-label"
      >
        Dark Mode
      </div>
    </button>
    <div
      className="username-tag"
    >
      Victor Infante
    </div>
    <img
      alt="Victor Infante"
      className="user-badge"
      src="https://cdn.pixabay.com/photo/2016/11/08/15/21/user-1808597_1280.png"
    />
  </div>
</header>
`;

exports[`Header should render correctly with expanded sidebar 1`] = `
<header
  className="sc-hKMtZM hjNxSb"
>
  <button
    id="sidebarToggler"
    onClick={[Function]}
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"
        key="0"
      />
    </svg>
  </button>
  <a
    className="app-link"
    href="/"
    onClick={[Function]}
  >
    <div
      className="app-icon"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M508.64 148.79c0-45-33.1-81.2-74-81.2C379.24 65 322.74 64 265 64h-18c-57.6 0-114.2 1-169.6 3.6C36.6 67.6 3.5 104 3.5 149 1 184.59-.06 220.19 0 255.79q-.15 53.4 3.4 106.9c0 45 33.1 81.5 73.9 81.5 58.2 2.7 117.9 3.9 178.6 3.8q91.2.3 178.6-3.8c40.9 0 74-36.5 74-81.5 2.4-35.7 3.5-71.3 3.4-107q.34-53.4-3.26-106.9zM207 353.89v-196.5l145 98.2z"
          key="0"
        />
      </svg>
    </div>
    <h1>
      Llutuve
    </h1>
  </a>
  <form
    className="sc-bczRLJ byqFuz"
  >
    <input
      autoComplete="off"
      name="q"
      onChange={[Function]}
      placeholder="Search"
      theme={
        Object {
          "appIcon": "#ff0200",
          "background": "#F9F9F9",
          "barBackground": "#ffffff",
          "inputBackground": "#ffffff",
          "inputBorder": "#cccccc",
          "linkActive": "#ff0200",
          "linkHoverBackground": "#ececec",
          "primary": "#030303",
          "searchButtonBackground": "#f8f8f8",
          "secondary": "#606060",
        }
      }
      type="text"
      value=""
    />
    <button
      className="clear-button"
      onClick={[Function]}
      type="button"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
          key="0"
        />
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          key="1"
        />
      </svg>
    </button>
    <button
      className="search-button"
      onClick={[Function]}
      type="submit"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 16 16"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
          key="0"
        />
      </svg>
    </button>
  </form>
  <div
    className="sc-dkzDqf cbTxFK"
  >
    <button
      checked={false}
      className="sc-gsnTZi iizJZa"
      onClick={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="slider-background"
      >
        <div
          className="slider"
        />
      </div>
      <div
        className="slider-label"
      >
        Dark Mode
      </div>
    </button>
    <div
      className="username-tag"
    >
      Victor Infante
    </div>
    <img
      alt="Victor Infante"
      className="user-badge"
      src="https://cdn.pixabay.com/photo/2016/11/08/15/21/user-1808597_1280.png"
    />
  </div>
</header>
`;
